CSS spacing fix (VS Code "Format document" tool)

--- a/static/stylesheet.css
+++ b/static/stylesheet.css
@@ -1,13 +1,16 @@
-html, body {
+html,
+body {
     height: 100%;
     padding: 0;
     margin: 0;
 }
+
 body {
     /* Font family value generated by VS Code (tries to select native system sans serif font) */
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    background-color:rgb(217, 232, 246);
+    background-color: rgb(217, 232, 246);
 }
+
 .nav-bar {
     display: flex;
     padding: 10px;
@@ -15,6 +18,7 @@ body {
     color: white;
     height: 50px;
 }
+
 .footer {
     display: flex;
     padding: 3px;
@@ -22,25 +26,33 @@ body {
     color: white;
     height: 30px;
 }
+
 .nav-bar a {
     color: white;
     text-decoration: none;
 }
+
 .footer a {
     color: rgb(208, 208, 208);
     text-decoration: none;
 }
-.footer .testing a, .footer .testing {
+
+.footer .testing a,
+.footer .testing {
     color: rgb(223, 80, 80);
 }
+
 .footer .testing-label {
     color: rgb(197, 32, 32);
 }
-.nav-bar .title, .nav-bar .title a {
+
+.nav-bar .title,
+.nav-bar .title a {
     color: #80ffb3;
     margin: auto 0;
     font-size: 20pt;
 }
+
 .nav-bar ul {
     display: flex;
     list-style-type: none;
@@ -48,47 +60,61 @@ body {
     margin-top: auto;
     margin-bottom: auto;
 }
+
 .footer ul {
     display: flex;
     list-style-type: none;
     margin: auto;
 }
-.nav-bar ul li, .footer ul li {
+
+.nav-bar ul li,
+.footer ul li {
     margin: 0 0.5em;
 }
+
 #main-content {
-    width: 80%;   /*set to 80% and then moved to the right 10% should position it in the middle */
+    width: 80%;
+    /*set to 80% and then moved to the right 10% should position it in the middle */
     margin: 0 auto;
     background-color: white;
     padding: 6px;
     min-height: calc(100vh - 120px);
 }
+
 .posts-container {
     text-align: center;
 }
+
 .post img {
     padding-right: 20px;
     max-height: 250px;
     max-width: 250px;
 }
-.post span, a {
+
+.post span,
+a {
     display: inline-block;
 }
+
 .post .post-location {
     font-weight: bold;
     font-size: 13pt;
     margin-bottom: 10px;
 }
+
 .post .post-location a {
     color: inherit;
 }
+
 .post .post-title {
     font-weight: bold;
     overflow-wrap: anywhere;
 }
+
 .post .post-info-secondary {
     color: gray;
 }
+
 .post {
     display: inline-flex;
     flex-direction: column;
@@ -98,14 +124,20 @@ body {
 
 /* Mobile formatting*/
 @media only screen and (max-width: 600px) {
-    .testing, .testing-label, .testing-divider {
+
+    .testing,
+    .testing-label,
+    .testing-divider {
         display: none;
     }
+
     .nav-bar ul {
         font-size: 10pt;
         padding-left: 20px;
     }
-    .nav-bar ul li, .footer ul li {
+
+    .nav-bar ul li,
+    .footer ul li {
         margin: 0 4px;
     }
 }
@@ -116,23 +148,28 @@ body {
     margin-top: 1rem;
     width: auto;
 }
+
 .contact-container {
     text-align: left;
     margin-bottom: 20px;
 }
+
 .contact-item {
     margin-bottom: 15px;
 }
+
 .contact-heading {
     text-align: justify;
     font-size: 2rem;
     font-weight: bold;
-    text-decoration: underline;    
+    text-decoration: underline;
 }
+
 .contact-p {
     text-align: justify;
     font-size: x-large;
 }
+
 .p {
     display: block;
     margin-block-start: 1em;
@@ -140,13 +177,16 @@ body {
     margin-inline-start: 0px;
     margin-inline-end: 0px;
 }
+
 .text-center {
     text-align: center;
     margin-bottom: 20px;
 }
+
 .text-left {
     text-align: left;
 }
+
 .hidden-box {
     padding: 20px;
     border: 0px;
@@ -155,6 +195,7 @@ body {
     margin: auto;
     max-width: 800px;
 }
+
 .box-container {
     padding: 20px;
     border: 1px solid #ccc;
@@ -163,10 +204,12 @@ body {
     margin: auto;
     max-width: 800px;
 }
+
 .inner-link {
     display: flex;
     flex-direction: column;
 }
+
 .thin {
     text-decoration-line: underline;
     text-decoration-style: solid;
